Forgot sth minor

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https:gilbertmunuotz.github.io/tailwindcss/",
+  "homepage": "https:gilbertmunuotz.github.io/tailw..../",
   "name": "tailwindcss",
   "version": "0.1.0",
   "private": true,
